<resources>
    <string name="app_name">Popular Movies</string>

    <string name="movie_key" translatable="false">movie</string>

    <string name="error_message_no_internet_title">Uh oh!</string>
    <string name="error_message_no_internet">Make sure you are connected to the internet</string>
    <string name="error_message_reviews">Could not get the movie reviews. Check your Internet connection!</string>
    <string name="no_reviews_message">There are no reviews for this movie yet.</string>
    <string name="no_videos_message">There are no videos for this movie yet.</string>
    <string name="marked_as_favorite">Marked as favorite!</string>
    <string name="unmarked_as_favorite">Unmarked as favorite!</string>

    <string name="release_year_label">Release year</string>
    <string name="original_title_label">Original Title</string>
    <string name="overview_label">Overview</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>

    <string name="action_settings">Settings</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_label_popular">Most Popular</string>
    <string name="pref_sort_order_label_top">Top Rated</string>
    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_sort_order_popular" translatable="false">popular</string>
    <string name="pref_sort_order_top" translatable="false">top_rated</string>
    <string name="pref_show_favorites_key" translatable="false">show_favorites</string>
    <string name="pref_show_favorites_label">Show Favorites</string>
    <string name="pref_show_false">Show all movies</string>
    <string name="pref_show_true">Show only favorite movies</string>


</resources>
